--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
 
         <tr onmouseout="nightsight_stop()" onmouseover="nightsight_start()">
             <td style="padding:10px;width:20%;vertical-align:middle">
-                <img src="images/cde.jpg" alt="hpp" style="border-style: none" width="200">
+                <img src="images/quantile.jpg" alt="hpp" style="border-style: none" width="200">
             </td>
             <td style="padding:10px;width:80%;vertical-align:middle">
                 <p>
