--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                 <p>
                 <papertitle>Deep Distributional Learning with Non-crossing Quantile Network</papertitle>
                 </p>
-                <strong>Runpeng Dai</strong>, Runpeng Dai, Guojun Wu, Shikai Luo, Chengchun Shi, Hongtu Zhu
+                Guohao Shen, <strong>Runpeng Dai</strong>, Guojun Wu, Shikai Luo, Chengchun Shi, Hongtu Zhu
                 <br>
                 <em><strong>(arXiv)</strong>, 2025.</em>
                 <br>
