--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
           </li>
           <li>
             Parallel Reasoning: 
-            <a href="https://arxiv.org/2509.07980"> Parallel-R1</a>, the first RL framework to teach LLMs parallel thinking.
+            <a href="https://arxiv.org/abs/2509.07980"> Parallel-R1</a>, the first RL framework to teach LLMs parallel thinking.
           </li>
           <li>
             Information Extraction: 
@@ -419,7 +419,7 @@
           
         <tr onmouseout="nightsight_stop()" onmouseover="nightsight_start()">
             <td style="padding:10px;width:20%;vertical-align:middle">
-                <img src="images/cde.jpg" alt="hpp" style="border-style: none" width="200">
+                <img src="images/PIE.jpg" alt="hpp" style="border-style: none" width="200">
             </td>
             <td style="padding:10px;width:80%;vertical-align:middle">
                 <p>
