--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
           
         <tr onmouseout="nightsight_stop()" onmouseover="nightsight_start()">
             <td style="padding:10px;width:20%;vertical-align:middle">
-                <img src="images/PIE.jpg" alt="hpp" style="border-style: none" width="200">
+                <img src="images/PIE.png" alt="hpp" style="border-style: none" width="200">
             </td>
             <td style="padding:10px;width:80%;vertical-align:middle">
                 <p>
