--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
     if (r1reDiv) r1reDiv.innerHTML = renderAuthors(r1reAuthors);
 
     // FI
-    const fiAuthors = "Run Yang, Runpeng Dai, Fan Zhou, Hongtu Zhu";
+    const fiAuthors = "Runpeng Dai, Run Yang, Fan Zhou, Hongtu Zhu";
     const fiDiv = document.getElementById('coauthors-FI');
     if (fiDiv) fiDiv.innerHTML = renderAuthors(fiAuthors);
 
